fix: animation docs

--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -27,7 +27,7 @@ Once you've installed dank, you're ready to start using it in your project. you 
 import { styled, StyledProvider } from '@dank-style/react';
 ```
 
-To configure `dank`, you will need to create a `dank.config.js` file (.js works too) in the root of your project. In this config file, you can define your theme tokens, breakpoints, and any other settings that you want to use throughout your application. Once your config file is set up, you can import it and pass it as a prop to the `StyledProvider` component, which should be wrapped around your entire application. This will make the configuration options available to all components using the styled function.
+To configure `dank`, you will need to create a `dank.config.ts` file (`.js` works too) in the root of your project. In this config file, you can define your theme tokens, breakpoints, and any other settings that you want to use throughout your application. Once your config file is set up, you can import it and pass it as a prop to the `StyledProvider` component, which should be wrapped around your entire application. This will make the configuration options available to all components using the styled function.
 
 For example, in dank.config.js:
 
