--- a/example/storybook/src/configuration/SSR/index.stories.mdx
+++ b/example/storybook/src/configuration/SSR/index.stories.mdx
@@ -7,7 +7,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="configuration/SSR" />
 
-# SSR
+# Server-Side Rendering
 
 Dank provides support for server-side rendering (SSR) by exporting a **`flush`** function. The **`flush`** function is used to flush out any styles that were generated during the server-side render process, so that they can be added to the HTML document.
 
