--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -33,50 +33,49 @@ For example, in dank.config.js:
 
 ```jsx
 export const config = {
-    aliases: {
-      bg: 'backgroundColor',
-      bgColor: 'backgroundColor'
-      rounded: 'borderRadius',
-    },
+  aliases: {
+    bg: 'backgroundColor',
+    bgColor: 'backgroundColor',
+    rounded: 'borderRadius',
+  },
 
-    tokens: {
-      colors: {
-        primary0: '#ffffff',
-        primary400: '#c084fc',
-        primary500: '#a855f7',
-        primary600: '#9333ea',
-      },
-      space: {
-        '4': 16,
-        '5': 20,
-        '6': 24,
-      },
-      radii: {
-        'sm': 4,
-        'md': 6,
-      },
-      letterSpacings: {
-        'md': 0,
-      },
-      lineHeights: {
-        'sm': 20,
-        'md': 22,
-      },
-      fontWeights: {
-        normal: '400',
-        medium: '500',
-      },
-      fontSizes: {
-        'sm': 14,
-        'md': 16,
-      },
-  		mediaQueries: {
-  	    'sm': '@media (min-width: 480px)',
-  	    'md': '@media (min-width: 768px)',
-  	  },
+  tokens: {
+    colors: {
+      primary0: '#ffffff',
+      primary400: '#c084fc',
+      primary500: '#a855f7',
+      primary600: '#9333ea',
     },
-  } as const;
-
+    space: {
+      4: 16,
+      5: 20,
+      6: 24,
+    },
+    radii: {
+      sm: 4,
+      md: 6,
+    },
+    letterSpacings: {
+      md: 0,
+    },
+    lineHeights: {
+      sm: 20,
+      md: 22,
+    },
+    fontWeights: {
+      normal: '400',
+      medium: '500',
+    },
+    fontSizes: {
+      sm: 14,
+      md: 16,
+    },
+    mediaQueries: {
+      sm: '@media (min-width: 480px)',
+      md: '@media (min-width: 768px)',
+    },
+  },
+};
 ```
 
 Then, in your application's entry point, you can import the config file and pass it as a prop to the StyledProvider component, which should be a parent component to all your other components:
