--- a/example/storybook/src/plugins/Introduction/index.stories.mdx
+++ b/example/storybook/src/plugins/Introduction/index.stories.mdx
@@ -1,14 +1,14 @@
 ---
-title: Introduction | Dank
+title: Intro to Plugins | Dank
 description: Dank provides a plugin system to extend existing functionality of styled function. It's a great way to add support for new aliases, tokens and beyond.
 canonical: https://dank.style/
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="plugins/Introduction" />
+<Meta title="plugins/Intro to Plugins" />
 
-# Introduction
+# Intro to Plugins
 
 Dank provides a plugin system to extend existing functionality of styled function. It's a great way to add support for new aliases, tokens and beyond that as well.
 
