--- a/example/storybook/src/plugins/CSSVariables/index.stories.mdx
+++ b/example/storybook/src/plugins/CSSVariables/index.stories.mdx
@@ -6,13 +6,11 @@ canonical: https://dank.style/
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="plugins/CSSVariables" />
+<Meta title="plugins/CSS Variables Plugin" />
 
 # CSS Variables Plugin
 
-!!!
-💡 This is a web-only plugin
-!!!
+> 💡 This is a web-only plugin
 
 An internal plugin to insert all theme tokens as css variables in your global styles.
 
