feat: updated docs

--- a/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
+++ b/example/storybook/src/advanced/BabelPlugins/index.stories.mdx
@@ -41,7 +41,7 @@ Here’s a small diagram explaining how the flow works:
   </Box>
   <Box
     sx={{
-      _light_: {
+      _light: {
         display: 'none',
       },
     }}
