--- a/example/storybook/src/components/Text/index.stories.mdx
+++ b/example/storybook/src/components/Text/index.stories.mdx
@@ -11,7 +11,7 @@ import { Meta } from '@storybook/addon-docs';
 <Meta title="components/Text" />
 
 import { Text } from './Text';
-import { Center } from './../Center/Center';
+import { Center } from '../Center/Center';
 import { transformedCode } from '../../utils';
 import Wrapper from '../Wrapper';
 
