--- a/example/storybook/src/components/Button/index.stories.mdx
+++ b/example/storybook/src/components/Button/index.stories.mdx
@@ -516,7 +516,7 @@ import {
   GroupHSpacer,
   GroupVSpacer,
   Spinner,
-} from './components/Button';
+} from '../ui-components/Button/styled-components';
 
 // import the createButton function
 import { createButton } from '@gluestack-ui/button';
@@ -542,4 +542,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Button` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/button/index.tsx) of the styled `Button` components.
+Default styling of all these components can be found in the `components/Button` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/ui-components/Button/index.tsx) of the styled `Button` components.
