--- a/example/storybook/src/components/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Toast/index.stories.mdx
@@ -26,7 +26,7 @@ import Wrapper from '../Wrapper';
 
 # Installation
 
-This command copies the `Input` component to your project.
+This command copies the `Toast` component to your project.
 
 ```jsx
 npx install @gluestack/ui add Toast
@@ -310,7 +310,7 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
 
 ## Customizing the Toast
 
-We have a function called `createToast` which can be used to create a custom button component. This function takes in a configuration object which contains the styled components that you want to use for the Input. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+We have a function called `createToast` which can be used to create a custom toast component. This function takes in a configuration object which contains the styled components that you want to use for the Input. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 ### Usage
 
