--- a/example/storybook/src/components/Input/index.stories.mdx
+++ b/example/storybook/src/components/Input/index.stories.mdx
@@ -28,7 +28,7 @@ import Wrapper from '../Wrapper';
 This command copies the `Input` component to your project.
 
 ```jsx
-npx install @gluestack/ui add Input
+npx install @gluestack-ui add Input
 ```
 
 ## Usage
@@ -309,4 +309,4 @@ export default () => (
 );
 ```
 
-Default styling of all these components can be found in the `components/Input` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/input/index.tsx) of the styled `Input` components.
+Default styling of all these components can be found in the `components/Input` file. For reference, you can view the [source code](https://github.com/gluestack/gluestack-ui/blob/development/example/storybook/src/ui-components/Input/index.tsx) of the styled `Input` components.
